--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcsh 'Texas -- History -- To 1846 -- Fiction'
 - !lcsh 'Western stories'
 - !lcc 'PQ'
+- GITenberg
 title: Los Merodeadores de Fronteras
 url: http://www.gutenberg.org/ebooks/46279
